# behaviour_lab

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  skills.md
.codex/: .codex-global-state.json  auth.json  cap_sid  config.toml  models_cache.json  session_index.jsonl  state_5.sqlite-shm
.codex/.sandbox/: setup_marker.json
.codex/.sandbox-secrets/: sandbox_users.json
.codex/vendor_imports/: skills-curated-cache.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/agents/: decision_engine.py  decision_policy.py  llm_policy.py  model_adapter.py  models.py  persona_loader.py  planning_policy.py  prompt_builder.py  relationship_policy.py  response_parser.py  state_machine.py
app/analytics/: __init__.py  agent_analytics.py  comparison_analytics.py  filters.py  social_analytics.py  world_analytics.py
app/api/: deps.py  logging.py  main.py
app/communication/: handlers.py  message_bus.py  models.py
app/dashboard/: app.py  main.py
app/memory/: retriever.py  summarizer.py  writer.py
app/persistence/: engine.py  init_db.py  models.py  seed.py
app/schemas/: api.py  decision_engine.py  events.py  settings.py  social.py  spatial.py
app/simulation/: pathfinding.py  runner.py  scenario_loader.py  spatial_context.py  tick_engine.py  (+2 more)
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: demo-success-criteria.md  mvp-limitations.md  phase2-demo.md  phase3-demo.md  phase4-hybrid-runbook.md
maps/: house.json
(+185 files in other folders)
